# simpleelf

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  simpleelf.py
.github/workflows/: python-package.yml  python-publish.yml
simpleelf/: elf_builder.py  elf_consts.py  elf_structs.py
tests/: test_build_elf.py
