[tool.poetry]
name = "simpleelf"
version = "0.1.0"
description = "Simple ELF parser and builder"
authors = ["DoronZ <doron88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
construct = "^2.10.56"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

