[tool.poetry]
name = "simpleelf"
version = "0.1.3"
description = "Simple ELF parser and builder"
authors = ["DoronZ <doron88@gmail.com>"]
homepage = "https://github.com/doronz88/simpleelf"
repository = "https://github.com/doronz88/simpleelf"
documentation = "https://github.com/doronz88/simpleelf"
packages = [
    { include = "simpleelf/*.py" }
]

[tool.poetry.dependencies]
python = "^3.6"
construct = "^2.10.56"
pytest = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

