[tool.poetry]
name = "simpleelf"
version = "0.1.4"
description = "Simple ELF parser and builder"
authors = ["DoronZ <doron88@gmail.com>"]
homepage = "https://github.com/doronz88/simpleelf"
repository = "https://github.com/doronz88/simpleelf"
documentation = "https://github.com/doronz88/simpleelf"
packages = [
    { include = "simpleelf/*.py" }
]

[tool.poetry.dependencies]
python = "^2.7|^3.0"
construct = "^2.10.54"
pytest = "^4.6.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

